--- a/about.html
+++ b/about.html
@@ -2,26 +2,15 @@
 layout: default
 title: About Us, Developers | Mystic
 section_id: about
-bars:
-  - title: Backend Development
-    percent: 100
-  - title: Web Development
-    percent: 95
-  - title: Mobile Development
-    percent: 82
-  - title: Training
-    percent: 75
 members:
-  - image: member-1.jpg
+  - image: andrew_lombardi.jpg
     name: Andrew Lombardi
     position: Founder &amp; Architect
     desc:
-      Andrew Lombardi is a veteran entrepreneur and software developer. His parents taught him to code while barely able to read on an
-      Apple // he still wishes he had. He invented the Internet and Nutella (suck it Al Gore) while drinking bulletproof coffee and
-      staring off into space. He’s been running the consulting firm Mystic Coders for 18 years, authored a kick-ass book for O'Reilly
-      on WebSocket, coding, speaking internationally and offering technical guidance to companies as large as Walmart and companies
-      with problems as interesting as helicopter simulation. He firmly believes that the best thing he’s done so far, is being a great
-      dad.
+      Andrew Lombardi is a veteran entrepreneur and software developer. His parents taught him to code while barely able to read on an Apple // he still wishes he had. 
+      He invented the Internet and Nutella (suck it Al Gore) while drinking bulletproof coffee and staring off into space. He’s been running the consulting firm Mystic 
+      Coders for 20 years, authored a kick-ass book for O'Reilly on WebSocket, coding, speaking internationally and offering technical guidance to companies as large as 
+      Walmart and companies with problems as interesting as helicopter simulation. He firmly believes that the best thing he’s done so far, is being a great dad.
     socials:
       - name: twitter
         link: https://twitter.com/kinabalu
@@ -32,15 +21,20 @@ members:
       - name: github
         link: https://github.com/kinabalu
         color: yellow
-  - image: ryan_sadler_profile.png
-    name: Ryan Sadler
-    position: Full-Stack Engineer
+  - image: jake_masters.jpg
+    name: Jake Masters
+    position: Technical Advisor
     desc:
-      Ryan started programming when he was 8 years old on a Commodore Vic20 using BASIC. Fascinated with Robotics and Artificial Intelligence he pursued an Honors degree in Computer and Electrical Engineering at Simon Fraser University.  As a student, Ryan was part of a student-lead team participating in the International Aerial Robotics Competition several years in a row.  Since graduation, Ryan has been a lead developer in several Internet Startups.  Ryan has experience developing mission-critical software in the Process Control and Finance Industries.  At night, Ryan dreams about building a better "SkyNet".
-    socials:
-      - name: github
-        link: https://github.com/rrx
-  - image: john_catalina_profile.jpg
+      Multi-disciplined technology leader with 18+ years of experience in managing 
+      tech teams, products and business development. I’ve spent the last 15 years 
+      with a specific interest in energy efficiency and electrical power quality 
+      issues, and the last 8 years focused on IoT platform development. I’ve been 
+      in the startup world for the last 10 years, holding various roles as technical 
+      founder, CTO, CEO, board member, and advisor. I’m always intrigued by the 
+      intersection of hardware, software and user, and find the challenge of developing 
+      products with seamless integration between the three rewarding- especially when 
+      applied to global energy issues.
+  - image: john_catalina.jpg
     name: John Catalina
     position: Business Advisor
     desc:
@@ -48,6 +42,28 @@ members:
       to a big fish story hardly to be believed. As a trusted advisor to Mystic for nearly 10 years, he has helped shape
       the values that we strive for with our customers, and has grounded a sense of purpose into the mission and values
       of the company.
+  - image: lucas_marohn.jpg
+    name: Lucas Marohn
+    position: Full-Stack Designer
+    desc:
+      Lucas is a talented designer and out-of-the-box thinker who has worked with Mystic on 
+      several of our key projects. He is one of the rare people who can nicely straddle the 
+      line between development, design and an ability to discern what a client needs. A strong 
+      member of the team he has been instrumental in infusing a bit more of the pretty into the 
+      elements that Mystic delivers to our clients, and to the world.      
+  - image: ryan_sadler.jpg
+    name: Ryan Sadler
+    position: Full-Stack Engineer
+    desc:
+      Ryan started programming when he was 8 years old on a Commodore Vic20 using BASIC. Fascinated with Robotics 
+      and Artificial Intelligence he pursued an Honors degree in Computer and Electrical Engineering at Simon Fraser
+       University.  As a student, Ryan was part of a student-lead team participating in the International Aerial Robotics 
+       Competition several years in a row.  Since graduation, Ryan has been a lead developer in several Internet Startups.  
+       Ryan has experience developing mission-critical software in the Process Control and Finance Industries.  At night, Ryan 
+       dreams about building a better "SkyNet".
+    socials:
+      - name: github
+        link: https://github.com/rrx
 ---
 
 <div class='full'>
@@ -62,26 +78,13 @@ members:
     <div class='spacing'></div>
   </div>
   <div class='row'>
-    <div class='medium-6 large-6 columns'>
+    <div class='medium-12 large-12 columns'>
       <p>
         <span class='drop-letters'>O</span>
         ur team is a dedicated group of technologists and business-minded folks who have a passion for solving business needs with tech-based solutions.  Headed by our geek in charge Andrew Lombardi, the group has created solutions for companies as large as Walmart and Motorola, to the yoga teacher just looking for a some help with her website.  Over the last 6 years our team has also spoken at venues around the world, teaching developers how to better use their tools, and imparting wisdom about best practices for using them.</p>
 
         <p>We're excited to work with our clients, as we feel it is a partnership that we grow together.  We look forward to talking about your needs, and seeing if we can build something great together.
         </p>
-    </div>
-    <div class='medium-6 large-6 columns'>
-      <ul class='bars'>
-        {% for bar in page.bars %}
-          <li>
-            <h4>
-              {{bar.title}}
-              <strong>{{bar.percent}}%</strong>
-            </h4>
-            <p class='highlighted' data-percent='{{bar.percent}}'></p>
-          </li>
-        {% endfor %}
-      </ul>
     </div>
   </div>
 </div>
@@ -99,7 +102,7 @@ members:
         {% endif %}
         <div class='medium-4 large-4 columns'>
           <div class='member centered-text {{active_class}}'>
-            <img src='{{site.url}}/images/{{member.image}}'>
+            <img src='{{site.url}}/images/about/{{member.image}}'>
             <h3>{{member.name}}</h3>
             <p class='position'>{{member.position}}</p>
             <p>
