--- a/about.html
+++ b/about.html
@@ -21,25 +21,12 @@ members:
       - name: github
         link: https://github.com/kinabalu
         color: yellow
-  - image: jake_masters.jpg
-    name: Jake Masters
-    position: Technical Advisor
-    desc:
-      Multi-disciplined technology leader with 18+ years of experience in managing 
-      tech teams, products and business development. I’ve spent the last 15 years 
-      with a specific interest in energy efficiency and electrical power quality 
-      issues, and the last 8 years focused on IoT platform development. I’ve been 
-      in the startup world for the last 10 years, holding various roles as technical 
-      founder, CTO, CEO, board member, and advisor. I’m always intrigued by the 
-      intersection of hardware, software and user, and find the challenge of developing 
-      products with seamless integration between the three rewarding- especially when 
-      applied to global energy issues.
   - image: john_catalina.jpg
     name: John Catalina
     position: Business Advisor
     desc:
       John Catalina has worked in such a wide ranging list of industries and experiences that to write them would equate
-      to a big fish story hardly to be believed. As a trusted advisor to Mystic for nearly 10 years, he has helped shape
+      to a big fish story hardly to be believed. As a trusted advisor to Mystic for over 15 years, he has helped shape
       the values that we strive for with our customers, and has grounded a sense of purpose into the mission and values
       of the company.
   - image: lucas_marohn.jpg
@@ -50,7 +37,10 @@ members:
       several of our key projects. He is one of the rare people who can nicely straddle the 
       line between development, design and an ability to discern what a client needs. A strong 
       member of the team he has been instrumental in infusing a bit more of the pretty into the 
-      elements that Mystic delivers to our clients, and to the world.      
+      elements that Mystic delivers to our clients, and to the world.
+    socials:
+      - name: github
+        link: https://github.com/lukemarohn     
   - image: ryan_sadler.jpg
     name: Ryan Sadler
     position: Full-Stack Engineer
@@ -81,9 +71,14 @@ members:
     <div class='medium-12 large-12 columns'>
       <p>
         <span class='drop-letters'>O</span>
-        ur team is a dedicated group of technologists and business-minded folks who have a passion for solving business needs with tech-based solutions.  Headed by our geek in charge Andrew Lombardi, the group has created solutions for companies as large as Walmart and Motorola, to the yoga teacher just looking for a some help with her website.  Over the last 6 years our team has also spoken at venues around the world, teaching developers how to better use their tools, and imparting wisdom about best practices for using them.</p>
+        ur team is a dedicated group of technologists and business-minded folks who have a passion for solving 
+        business needs with tech-based solutions.  Headed by Andrew Lombardi, the group has created solutions for 
+        companies as large as Walmart and Motorola, to the yoga teacher just looking for a some help with her website.  
+        Over the last 11 years our team has also spoken at venues around the world, teaching developers how to better 
+        use their tools, and imparting wisdom about best practices for using them.</p>
 
-        <p>We're excited to work with our clients, as we feel it is a partnership that we grow together.  We look forward to talking about your needs, and seeing if we can build something great together.
+        <p>We're excited to work with our clients, as we feel it is a partnership that we grow together.  We look 
+          forward to talking about your needs, and seeing if we can build something great together.
         </p>
     </div>
   </div>
