add the newsletter and tracking

--- a/index.html
+++ b/index.html
@@ -77,19 +77,20 @@ works:
     <div class='large-6 columns'>
       <h2 class='light'>Who we are</h2>
       <p>
-        Our team is a dedicated group of technologists and business-minded folks
-        who have a passion for solving business needs with tech-based solutions.
-        Headed by our geek in charge Andrew Lombardi, the group has created
-        solutions for companies as large as Walmart and Motorola, to the yoga
-        teacher just looking for a some help with her website.  Over the last 10
-        years our team has also spoken at venues around the world, teaching
-        developers how to better use their tools, and imparting wisdom about
-        best practices for using them.  We're excited to work with our clients,
-        as we feel it is a partnership that we grow together.  We look forward
-        to talking about your needs, and seeing if we can build something great
-        together.
+        At Mystic we pride ourselves on bringing real-world experience to your software project. 
+        We've been offering consulting and development services to companies from the startup 
+        building out their MVP to the Fortune 500. Let us show you how
+        our team extension can help you get your project started or finally 
+        finished.
+        <a href="about.html" class='button boxed'>Find Out More</a>
       </p>
-      <a href="about.html" class='button boxed'>Know more</a>
+      <p>
+        Our weekly reads newsletter contains the articles our team has identified as being 
+        interesting in the past week. One week could be about NFTs, another could talk about 
+        how to deploy effectively using Docker on AWS. We hope you enjoy and if you like what 
+        you're reading please forward it to friends who would like it.
+      </p>
+      <a href="#" class='button boxed' onClick="window.open('https://forms.aweber.com/form/20/2651020.htm')">Sign Up for Newsletter</a>
     </div>
   </div>
 </div>
