fix the newsletter links

--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@ works:
         building out their MVP to the Fortune 500. Let us show you how
         our team extension can help you get your project started or finally 
         finished.
-        <a href="about.html" class='button boxed'>Find Out More</a>
       </p>
+        <a href="about.html" class='button boxed'>Find Out More</a>
       <p>
         Our weekly reads newsletter contains the articles our team has identified as being 
         interesting in the past week. One week could be about NFTs, another could talk about 
         how to deploy effectively using Docker on AWS. We hope you enjoy and if you like what 
         you're reading please forward it to friends who would like it.
       </p>
-      <a href="#" class='button boxed' onClick="window.open('https://forms.aweber.com/form/20/2651020.htm')">Sign Up for Newsletter</a>
+      <a href="https://forms.aweber.com/form/20/2651020.htm" target="_blank" class='button boxed'>Sign Up for Newsletter</a>
     </div>
   </div>
 </div>
