fix Gemfile and add google tag for thank you page upon signup

--- a/thankyou_newsletter.html
+++ b/thankyou_newsletter.html
@@ -2,8 +2,10 @@
 layout: default
 title: Thank You For Signing Up | Mystic
 section_id: thank_you
+gtag:
+    event_type: 'conversion'
+    send_to: 'AW-1054116853/53VICPSDppMCEPWX0vYD'
 ---
-
 <div class='full'>
   <div class='row'>
     <div class='special-title centered-text'>
